@@ -1,3 +1,14 @@
+2008-04-04  kitone  <kitone@gna.org>
+
+	* src/actions/WaveformEditor.cc:
+	* src/actions/WaveformEditor.h:
+	* src/actions/WaveformRenderer.cc:
+	* src/actions/WaveformRenderer.h:
+	* src/actions/WaveformRendererCairo.cc:
+	* src/actions/WaveformRendererGL.cc:
+	Fix waveform/scrollbar configure event.
+	Fix debug waveform.
+
 2008-04-03  kitone  <kitone@gna.org>
 
 	* src/gui/DialogFileChooser.cc:
